- Updated swagger specifications
